# I7266

./: .gitignore  README.md
001_Slides/: 009_C_Compiler.odp
001_Slides/005_C_Datatypes/: main.tex
001_Slides/007_Microcontroller_Architecture/: main.bbl-SAVE-ERROR  main.tex  refs.bib
001_Slides/007_Microcontroller_Architecture/tex/: main.tex  refs.bib
001_Slides/008_Microcontroller_Peripherals/: build_s.sh
001_Slides/008_Microcontroller_Peripherals/tex/: main.tex
001_Slides/008_Programming_the_ATmega328P/assets/: logo_udg_color.eps
003_Assignments/001_Activities/001/tex/: Makefile  main.tex
003_Assignments/001_Classwork/: build_t.sh
003_Assignments/001_Classwork/001/: build_c.sh
003_Assignments/002_Homework/001/tex/: main.tex
003_Assignments/002_Homework/002/: Makefile  main.tex
003_Assignments/002_Homework/003/: main.tex
003_Assignments/002_Homework/004/: main.tex
003_Assignments/002_Homework/004/tex/: main.tex
003_Assignments/002_Homework/005/tex/: main.tex
003_Assignments/002_Homework/006/: build.sh
003_Assignments/002_Homework/006/tex/: main.tex
003_Assignments/002_Homework/007/tex/: main.tex
003_Assignments/003_Exercises/001/: build_p.sh
003_Assignments/003_Exercises/001/tex/: main.tex
003_Assignments/003_Exercises/002 copy/tex/: main.tex
004_Code/: .gitignore  batchclean.sh
004_Code/mega328P/: ICU.c  Wdt.c
004_Code/mega328P/001_HelloWorld/: CMakeLists.txt
004_Code/mega328P/001_HelloWorld/src/: main.c
004_Code/mega328P/010_BasicExamples/110_DisplayExample/: .dccache
004_Code/mega328P/010_BasicExamples/130_ExternalInterrupt/: .clangd
004_Code/mega328P/010_BasicExamples/180_Watchdog/: main.c
004_Code/mega328P/010_BasicExamples/ICU/: main.c
004_Code/mega328P/010_DisplayExample/src/: main.c
004_Code/mega328P/020_IntermediateExamples/100_USART/: CMakeLists.txt
004_Code/mega328P/020_IntermediateExamples/602_4x7SDisplayTest/: .dccache
004_Code/mega328P/020_InternalInterrupt/src/: main.c
004_Code/mega328P/060_ADC/src/: main.c
004_Code/mega328P/070_SPI/src/: main.c
004_Code/mega328P/100_Clock/030_External_Tick/: CMakeLists.txt
004_Code/mega32A/C/001_HelloWorld/: main.hex
004_Code/mega32A/asm/Test/: main.asm
004_Code/x86-64/: CMakeLists.txt
004_Examples/: Makefile  Makefile2
004_Examples/C/001_Datatypes/: main  main.c
004_Examples/C/005_Triangle/: main.c
004_Examples/C/006_Temperature/: main.c
004_Examples/mega328P/001_HelloWorld/: main.c
004_Examples/mega328P/002_Patterns/: main.c
004_Examples/mega328P/002_Patterns/002/: main.c
004_Examples/mega328P/002_Patterns/003/: main.c
004_Examples/mega328P/002_Patterns/004/: Makefile  main.c
004_Examples/mega328P/002_Patterns/005/: main.c
004_Examples/mega328P/003_Toggle/001/: main.c
004_Examples/mega328P/003_Toggle/002/: main.c
004_Examples/mega328P/003_Toggle/003/: main.c
004_Examples/mega328P/003_Toggle/004/: main.c
004_Examples/mega328P/003_Toggle/005/: main.c
004_Examples/mega328P/003_Toggle/006/: main.c
004_Examples/mega328P/003_Toggle/007/: main.c
004_Examples/mega328P/003_Toggle/008/: main.c
004_Examples/mega328P/004_Timer0/000/: main.c
004_Examples/mega328P/004_Timer0/001/: main.c
004_Examples/mega328P/004_Timer0/101_Normal/: Makefile  main.c
004_Examples/mega328P/004_Timer0/102_/: main.c
004_Examples/mega328P/005_Counter/001/: Makefile  main.c
004_Examples/mega328P/005_Counter/002/: main.c
004_Examples/mega328P/005_Counter/003/: main.c
004_Examples/mega328P/006_Display/: main.c
004_Examples/mega328P/007_Display2/: Makefile  main.c
004_Examples/mega328P/008_USART/001/: main.c
004_Examples/mega328P/008_USART/002/: commands.txt  main  main.c  usart.c  usart.h
004_Examples/mega328P/008_USART/003/: Makefile  main.c
004_Examples/mega328P/008_USART/dummy_module/: main.c
004_Examples/mega328P/009_I2C/003/: Makefile  main.c
004_Examples/mega328P/010_RTC1/: Makefile  ds3231.c  main.c  usart.c
004_Examples/mega328P/010_RTC1/includes/: ds3231.h
004_Examples/mega328P/101_Assembly/001_HelloWorld/: main.asm
004_Examples/mega328P/101_Assembly/002_Rotabit/: Makefile  main.asm  main2.sx
004_Examples/mega328P/101_Assembly/003_KnightRider/: Makefile  main.asm
004_Examples/mega328P/901_TMP/: Makefile  main.c  usart.c
004_Examples/mega328P/ClockTest/: Makefile  main.c
004_Examples/mega32A/001_HelloWorld/: main  main.c
004_Examples/mega32A/002_Patterns/001/: main.c
004_Examples/mega32A/002_Patterns/002/: Makefile  main.c
004_Examples/mega32A/002_Patterns/003/: main.c
004_Examples/mega32A/002_Patterns/004/: main.c
004_Examples/mega32A/002_Patterns/005/: main.c
004_Examples/mega32A/003_Toggle/: main.c
004_Examples/x86-64/001_Datatypes/: main.c
004_Hardware/4d7s/: 4d7s.kicad_prl  fp-info-cache
005_Guides/AVR_env_setup_EN/tex/: Makefile
005_Guides/AVR_env_setup_ES/tex/: Makefile  main.tex
005_Guides/GCC_compile_guide_EN/tex/: main.tex
006_Templates/Exam/tex/: Makefile  main.tex  main2.tex
009_Miscellaneous/: ChatGPT.md
010_Slides/005_C_Datatypes/: main.tex
010_Slides/007_Microcontroller_Architecture/tex/: main.tex
010_Slides/Template/: main.tex
020_Assignments/002_Homework/004/: build.sh
030_Code/: .gitignore  batch_clean.sh  batchclean.sh
030_Code/mega328P/010_BasicExamples/110_DisplayExample/: CMakeLists.txt
030_Code/mega32A/asm/: commands.txt
030_Software/: batch_build.sh
040_Hardware/4d7s/: 4d7s.kicad_pro  4d7s.kicad_sch
050_Guides/AVR_env_setup_EN/tex/: main.tex
090_Miscellaneous/: ChatGPT.md  useful_links.txt
(+118 files in other folders)
